src/main/default/objects/V2_Gdrive__Object_Configuration__c/V2_Gdrive__Object_Configuration__c.object-meta.xml
<CustomObject>
    <label>Object Configuration</label>
    <nameField>
        <label>Object Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>