src/main/default/objects/V2_Gdrive__Object_Configuration__c/fields/V2_Gdrive__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>