src/main/default/objects/V2_Gdrive__Object_Configuration__c/fields/V2_Gdrive__Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__Folder_Id__c</fullName>
    <label>Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>