src/main/default/objects/V2_Gdrive__Object_Configuration__c/fields/V2_Gdrive__Related_Email__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__Related_Email__c</fullName>
    <label>Related Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>