src/main/default/objects/V2_Gdrive__Object_Configuration__c/listViews/V2_Gdrive__All.listView-meta.xml
<ListView>
    <fullName>V2_Gdrive__All</fullName>
    <columns>NAME</columns>
    <columns>V2_Gdrive__Related_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>